k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworldapp-deployment
  namespace: snake
  labels:
    app: helloworldapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworldapp
  template:
    metadata:
      labels:
        app: helloworldapp
    spec:
      containers:
      - name: helloworldapp
        image: 776604445685.dkr.ecr.us-east-2.amazonaws.com/helloworldapp:<IMAGE_TAG>
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
