k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworldapp-service
  namespace: snake
spec:
  selector:
    app: helloworldapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
